--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <div class="swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
+        <!-- O palmeiras é gigante>
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/Apachekafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
